--- a/template/templates/invalid.html
+++ b/template/templates/invalid.html
@@ -1,1 +1,2 @@
-<p>This combination is invalid. ${reason}</p>
+<p>This combination is invalid. {{reason}}</p>
+<p> Click here to <a href="/register">register</a></p>
