olivia push cookies

--- a/template/templates/register.html
+++ b/template/templates/register.html
@@ -7,8 +7,9 @@ Register with a username and password
     Password: <input name="password" type="password" />
 </br>
 
-<script type="text/javascript" src="/Users/nhupham/Downloads/INFO2222Project/template/key_manage.js"></script>
+<script type="text/javascript" src="js/key_manage.js"></script>
 <input value="Register" type="submit"/>
+<input type = "hidden" name="publickey" value="hjsahjdjsa"/>
 </form>
 </p>
 </center>
