--- a/template/templates/login_valid.html
+++ b/template/templates/login_valid.html
@@ -12,7 +12,7 @@
 
 
 <p> Click here to <a href="/send">send message</a></p>
-<p> Click here to <a href="/incoming">your incoming message</a></p>
+<p> Click here to <a href="/incoming/{{name}}">your incoming message</a></p>
 
 
 
