--- a/template/templates/message_send.html
+++ b/template/templates/message_send.html
@@ -13,7 +13,9 @@
 </br>
     Please enter message below:
 </br>
-    <input name="message" type="text" />
+    <input name="message" type="text" id="mess"/>
     <button type="submit">Send</button> 
 </form>
 </p>
+
+<!-- Encrypt message here -->
