--- a/template/templates/register.html
+++ b/template/templates/register.html
@@ -1,4 +1,4 @@
-Register with a username and password
+<p>Register with a username and password
 </p>
 <p>
 <form action="/register" method="post">
@@ -9,7 +9,7 @@ Register with a username and password
 
 <script type="text/javascript" src="js/key_manage.js"></script>
 <input value="Register" type="submit"/>
-<input type = "hidden" name="publickey" value="hjsahjdjsa"/>
+<!-- <input type = "hidden" name="publickey" value="hjsahjdjsa"/> -->
 </form>
 </p>
 </center>
