--- a/template/templates/login.html
+++ b/template/templates/login.html
@@ -3,9 +3,9 @@ Login with a username and password
 </p>
 <p>
 <form action="/login" method="post">
-    Username: <input name="username" type="text" />
+    Username: <input name="username" type="text" id="usr"/>
 </br>
-    Password: <input name="password" type="password" />
+    Password: <input name="password" type="password" id="pwd"/>
 </br>
     <input value="Login" type="submit" />
 </form>
