--- a/template/templates/login_valid.html
+++ b/template/templates/login_valid.html
@@ -12,8 +12,8 @@
 
 
 <p> Click here to <a href="/send">send message</a></p>
-<p> Click here to <a href="/incoming">your incoming message</a></p>
-
+<!-- <p> Click here to read <a href="/incoming/{{name}}">incoming messages</a></p> -->
+<p> Click here to read <a href="/incoming">incoming messages</a></p>
 
 
 
