"Gordon key generation in reg working. ee2e needs some work"

--- a/template/templates/login_valid.html
+++ b/template/templates/login_valid.html
@@ -4,7 +4,7 @@
 
 <ul>
     % for friend in friends:
-    <p><li>{{friend}}</li><br>
+    <p><li><a heref="/send/{{friend}}">{{friend}}</a></li><br>
     </p>
     % end
 </ul>
