--- a/template/templates/register.html
+++ b/template/templates/register.html
@@ -1,35 +1,48 @@
 <p>Register with a username and password
 </p>
 <p>
-<form action="/register" id= "register" method="post">
-    Username: <input name="username" type="text" id="name"/>
+<form action="/register" id= "register" name="register" method="post" onsubmit="createAndExportKey();">
+    Username: <input name="username" type="text" id="username"/>
 </br>
     Password: <input name="password" type="password" />
 </br>
-    <input type="hidden" id="PublicKey" name="PublicKey" value="temporarystring" />
+    <input type="hidden" id="PublicKey" name="PublicKey" value="Error!!!" />
     <input value="Register" type="submit"/>
-    <script>
-        let keyPair = await window.crypto.subtle.generateKey(
-            {
-            name: "RSA-OAEP",
-            modulusLength: 2048,
-            publicExponent: new Uint8Array([1, 0, 1]),
-            hash: "SHA-256"
-            },
-            true,
-            ["encrypt", "decrypt"]
-        );
-
-        const publicKey = keyPair.publicKey;
-        console.log(publicKey)
-        await crypto.subtle.exportKey("jwk", keyPair.publicKey);
-        document.forms["register"].PublicKey.value = publicKey;
-        document.register.submit();
-    </script>
-
-<script type="text/javascript" src="js/key_manage.js"></script>
-<input value="Register" type="submit"/>
-<!-- <input type = "hidden" name="publickey" value="hjsahjdjsa"/> -->
 </form>
 </p>
 </center>
+<script>
+    function createAndExportKey(){
+        crypto.subtle.generateKey(
+            {
+                name: "RSA-OAEP",
+                modulusLength: 2048,
+                publicExponent: new Uint8Array([1, 0, 1]),
+                hash: "SHA-256"
+            },
+            true,
+            ["encrypt", "decrypt"]
+            ).then(function(keyPair){
+                // Export private key
+                crypto.subtle.exportKey('jwk', keyPair.privateKey).then(function(jwk) {
+                    let jsonString = JSON.stringify(jwk);
+                    let name =  document.register.username.value;
+                    document.cookie = name + "=" + jsonString;
+                    // alert("Your Cookie : " + document.cookie);
+                    // console.log(jsonString)
+                });
+                // Export public key
+                crypto.subtle.exportKey("spki",keyPair.publicKey).then(function(result) {
+                    const exportedAsString = String.fromCharCode.apply(null, new Uint8Array(result))
+                    const exportedAsBase64 = window.btoa(exportedAsString);
+                    document.register.PublicKey.value = exportedAsBase64;
+                    // console.log(document.register.PublicKey.textContent)
+                    document.register.submit();
+                });
+            })
+        // console.log(keyPair)
+        return true;
+    }
+</script>
+
+
