--- a/template/templates/valid.html
+++ b/template/templates/valid.html
@@ -1,7 +1,7 @@
 <p>This username-password combination is valid, welcome {{name}}!</p>
 <!-- % username = name -->
 
-<script>
+<!-- <script>
     fetch('js/info.json')
     .then(response => response.text())
     .then(data => {
@@ -11,4 +11,4 @@
         document.cookie = curCookie;
         alert("Your Cookie : " + document.cookie);
     });
-</script>
+</script> -->
