--- a/template/templates/incoming.html
+++ b/template/templates/incoming.html
@@ -1,4 +1,3 @@
-<<<<<<< Updated upstream
 <style>
     table, th, td {
         border: 1px solid;
@@ -14,17 +13,12 @@
     }
 </style>
 
-=======
 <link rel="stylesheet" type="text/css" href="/css/temp.css">
->>>>>>> Stashed changes
+
 <p>All of your incoming encrypted messages are below, please select a message to decrypt it:</p>
 
-<!-- % messages = m_list -->
-<!-- % senders = s_list -->
-<<<<<<< Updated upstream
-=======
+<!-- Testing purposes -->
 % user  = Gordon
->>>>>>> Stashed changes
 % m_list  = ["dasadasdaddsadas","is","the","mesasdaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaasage","list"]
 % if not m_list:
 <p>You have no messages!</p>
@@ -44,6 +38,8 @@
     </tbody>
   </table>
 % end
+
+
 <script>
     // Storing the messages to decrypt
     const messages =  {{!m_list}};
@@ -66,6 +62,8 @@
         ["decrypt"]
         );
     }
+
+
     function getWebKey(username) {
         // let name = username + "=";
         let decoded_cookies = decodeURIComponent(document.cookie);
@@ -74,10 +72,11 @@
             crumb = cookie.split('=');
             // Check for username matching
             if (crumb[0]==username) {
-                return
+                return crumb[1]
             }
         }
     }
+    
 </script>
 
 
