--- a/Usability/templates/forum.html
+++ b/Usability/templates/forum.html
@@ -1,7 +1,27 @@
-<p>Welcome to the Forum!!!</p>
+<head>
+    <link rel="stylesheet" type="text/css" href="css/temp.css">
+    <script src="js/script_head.js"></script>
+    
+    <title>Simple Student Templating Solutions</title>
+</head>
+
+<p>
+<ul>
+    <li><a class="active" href="/home">Home</a></li>
+    <li><a href="/login">Login</a></li>
+    <li><a href="/about">About</a></li>
+</ul>
+</p>
+<center><h2>Welcome to the Forum!!!</h2>
+% forum_posts = (posts)
+<p>
+    Here are the current posts so far:
+    % for n in range(len(forum_posts)):
+        <br>{{forum_posts[n]}}
+</p>
 
 
 <script>
-    var posts = ${posts}
-    console.log()
+    // var posts
+    // console.log.posts
 </script>
